name:                printcess
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/system-fc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    linear,
    mtl,
    strict,
    template-haskell,
    transformers,
    unordered-containers >= 0.2.7.0,
    prelude-extras,
    data-default
  ghc-options:
    -Wall -fno-warn-partial-type-signatures -fdefer-type-errors
  exposed-modules:
    Printcess.PrettyPrinting
    Printcess.Tutorial
    Data.List.NonEmpty

executable printcess-example
  hs-source-dirs:
    example
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    linear,
    mtl,
    strict,
    template-haskell,
    transformers,
    unordered-containers >= 0.2.7.0,
    prelude-extras,
    printcess
  ghc-options:
    -Wall -fno-warn-partial-type-signatures -fdefer-type-errors

test-suite spec
  type:
      exitcode-stdio-1.0
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base >= 4.8 && < 5
    , HUnit
    , QuickCheck
    , hspec >= 1.5.3
    , printcess
