name:
  printcess
version:
  0.1.0.0
synopsis:
  Pretty Printing library
description:
  Supports indentation, parenthesis-elision according to fixity and
  associativity, and customizable automatic line breaks after text width
  exceedance.
homepage:
  https://github.com/m0rphism/printcess/
bug-reports:
  https://github.com/m0rphism/printcess/issues
license:
  BSD3
license-file:
  LICENSE
author:
  Hannes Saffrich
maintainer:
  Hannes Saffrich <m0rphism@zankapfel.org>
copyright:
  2016 Hannes Saffrich
category:
  Web
build-type:
  Custom
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    linear,
    mtl,
    strict,
    template-haskell,
    transformers,
    unordered-containers >= 0.2.7.0,
    prelude-extras,
    data-default
  ghc-options:
    -Wall -fno-warn-partial-type-signatures -fdefer-type-errors
  exposed-modules:
    Printcess.PrettyPrinting
    Printcess.Tutorial

source-repository head
  type:
    git
  location:
    https://github.com/m0rphism/printcess.git

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
    base >= 4.7 && < 5,
    containers,
    lens,
    linear,
    mtl,
    strict,
    template-haskell,
    transformers,
    unordered-containers >= 0.2.7.0,
    prelude-extras,
    data-default,
    HUnit,
    QuickCheck,
    hspec >= 1.5.3,
    printcess
